--- a/projects/async/towns.html
+++ b/projects/async/towns.html
@@ -1,6 +1,11 @@
+<html lang="ru">
+<head>
+    <title>Список городов</title>
+    <meta charset="UTF-8">
+</head>
 <div id="app">
-    <div id="loading-block">Загрузка...</div>
-    <div id="loading-failed">
+    <div id="loading-block" style="visibility: hidden">Загрузка...</div>
+    <div id="loading-failed" style="visibility: hidden">
         <div>Не удалось загрузить города</div>
         <button id="retry-button">Повторить</button>
     </div>
@@ -9,4 +14,6 @@
 
         <div id="filter-result"></div>
     </div>
+    <script src="index.js"></script>
 </div>
+</html>
