--- a/projects/geo-review/index.html
+++ b/projects/geo-review/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Геоотзыв</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <div id="map" class="map"></div>
@@ -42,7 +39,6 @@
     </div>
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js" type="text/javascript"></script>
 <script src="index.js" type="text/javascript"></script>
 </body>
-</html>
